--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,18 @@
             <version>6.8</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- MongoDB -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>3.0.4</version>
+        </dependency>
     </dependencies>
 
 </project>
