--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <artifactId>jedis</artifactId>
             <version>2.8.0</version>
         </dependency>
+
+        <!-- Ebean stuff (Bukkit) -->
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.9-R0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
